--- a/index.html
+++ b/index.html
@@ -5253,11 +5253,14 @@
                                                                                     color: var(--text-secondary);
                                                                                     text-transform: uppercase;
                                                                                     letter-spacing: 0.5px;
+                                                                                    display: inline-block;
+                                                                                    padding-bottom: 4px;
+                                                                                    border-bottom: 2px solid var(--primary);
                                                                                 }
 
                                                                                 .course-field .field-value {
                                                                                     font-size: 16px;
-                                                                                    font-weight: 600;
+                                                                                    font-weight: 400;
                                                                                     color: var(--text-color);
                                                                                 }
 
