--- a/index.html
+++ b/index.html
@@ -1293,24 +1293,40 @@ gap: 8px;
 background-color: var(--primary-dark);
 }
 
+/* Small variant for doc buttons (visually reduced to ~50%) */
+.doc-btn.small {
+  width: auto;
+  padding: 6px 12px; /* half of 12px 24px */
+  font-size: 12px; /* slightly smaller for readability */
+  transform-origin: center;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Shimmer effect for buttons */
 .shimmer {
-position: absolute;
-top: 0;
-left: -100%;
-width: 100%;
-height: 100%;
-background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-animation: shimmer 2s infinite;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.35), transparent);
+  animation: shimmer 2s infinite;
+  pointer-events: none;
 }
 
 @keyframes shimmer {
-0% {
-left: -100%;
+  0% { left: -100%; }
+  100% { left: 100%; }
 }
-100% {
-left: 100%;
-}
+
+/* Prospectus header actions align right */
+.prospectus-actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 8px;
 }
 
 /* Account Content Grid Layout */
@@ -3714,6 +3730,18 @@ font-size: 14px;
 text-transform: uppercase;
 letter-spacing: 0.5px;
 border-bottom: none;
+padding: 15px;
+}
+
+/* Inner box with AntiqueWhite background - covers all header content */
+.header-inner-box {
+background: #FAEBD7;
+padding: 12px 16px;
+border-radius: 6px;
+display: grid;
+grid-template-columns: 80px 1fr 100px 60px 70px 100px;
+gap: 12px;
+align-items: center;
 }
 
 .subject-row.header .subject-code,
@@ -3723,6 +3751,7 @@ border-bottom: none;
 .subject-row.header .subject-grade,
 .subject-row.header .subject-remarks {
 font-weight: 600;
+color: #1f2937;
 }
 
 .subject-row:not(.header):hover {
@@ -3748,31 +3777,19 @@ font-weight: 500;
 color: #4b5563;
 font-size: 12px;
 font-style: italic;
-background: #e5e7eb;
-padding: 4px 8px;
-border-radius: 4px;
 }
 
 .subject-units {
 text-align: center;
 font-weight: 600;
 color: #059669;
-background: #ecfdf5;
-padding: 4px 8px;
-border-radius: 4px;
 font-size: 13px;
 }
 
 .subject-grade {
 text-align: center;
 font-weight: 700;
-padding: 4px 8px;
-border-radius: 4px;
 font-size: 13px;
-}
-
-.subject-grade {
-background: #dbeafe;
 color: #1e40af;
 }
 
@@ -3781,17 +3798,6 @@ text-align: center;
 font-weight: 600;
 color: #10b981;
 font-size: 12px;
-background: #d1fae5;
-padding: 4px 8px;
-border-radius: 4px;
-}
-
-/* Header specific styles for boxes */
-.subject-row.header .subject-prerequisite {
-background: #e5e7eb !important;
-color: #4b5563 !important;
-padding: 4px 8px;
-border-radius: 4px;
 }
 
 /* Performance Summary Styles */
@@ -3859,6 +3865,94 @@ grid-template-columns: 1fr;
 .subjects-table {
 border-radius: 6px;
 }
+}
+
+/* Digital Credentials Styles */
+.digital-credentials-container {
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 60vh;
+padding: 40px 20px;
+}
+
+.credentials-definition-box {
+background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%);
+border: 2px solid #e5e7eb;
+border-radius: 20px;
+padding: 60px 50px;
+max-width: 900px;
+text-align: center;
+box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.credentials-definition-box:hover {
+transform: translateY(-5px);
+box-shadow: 0 25px 70px rgba(0, 0, 0, 0.15);
+}
+
+.credentials-icon {
+font-size: 80px;
+color: #3b82f6;
+margin-bottom: 30px;
+animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+0%, 100% { transform: translateY(0); }
+50% { transform: translateY(-10px); }
+}
+
+.credentials-definition-box h2 {
+font-size: 32px;
+color: #1f2937;
+margin-bottom: 25px;
+font-weight: 700;
+}
+
+.definition-text {
+font-size: 18px;
+line-height: 1.8;
+color: #4b5563;
+margin-bottom: 40px;
+max-width: 800px;
+margin-left: auto;
+margin-right: auto;
+}
+
+.credentials-features {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+gap: 20px;
+margin-top: 40px;
+}
+
+.feature-item {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+padding: 20px;
+background: #f0f9ff;
+border-radius: 12px;
+transition: all 0.3s ease;
+}
+
+.feature-item:hover {
+background: #dbeafe;
+transform: translateY(-3px);
+}
+
+.feature-item i {
+font-size: 32px;
+color: #3b82f6;
+}
+
+.feature-item span {
+font-size: 14px;
+font-weight: 600;
+color: #1e40af;
 }
 
 /* Reference Generator Styles */
@@ -6335,6 +6429,9 @@ opacity: 0.12;
 <li class="nav-item" data-section="prospectus">
 <a href="#"><i class="fas fa-book-open"></i> Curriculum Prospectus</a>
 </li>
+<li class="nav-item" data-section="digital-credentials">
+<a href="#"><i class="fas fa-certificate"></i> Digital Credentials</a>
+</li>
 
 <div class="nav-category">ADMINISTRATIVE SERVICES</div>
 <li class="nav-item" data-section="requirements">
@@ -6709,7 +6806,13 @@ opacity: 0.12;
 <div class="breadcrumb">
 <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Curriculum Prospectus</span>
 </div>
-<h1 class="page-title">Program Prospectus</h1>
+<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
+<h1 class="page-title" style="margin: 0;">Program Prospectus</h1>
+<button class="doc-btn medium" id="prospectus-download-btn" style="width: auto; position: relative; overflow: hidden;">
+  <i class="fas fa-download"></i> Download for Free
+  <span class="shimmer"></span>
+</button>
+</div>
 
 <div class="card">
 <div class="prospectus-header">
@@ -6720,11 +6823,6 @@ opacity: 0.12;
 <div class="program-info">
 <h2 class="card-title">BS Information Technology Program</h2>
 <p class="program-subtitle">Bachelor of Science in Information Technology</p>
-</div>
-<div class="prospectus-actions">
-<button class="doc-btn" id="prospectus-download-btn">
-<i class="fas fa-download"></i> Download for Free
-</button>
 </div>
 </div>
 </div>                                                                                            <div class="prospectus-stats">
@@ -6798,7 +6896,7 @@ opacity: 0.12;
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">Academic Load</div>
+<div class="subject-code">SUBJECT/</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -6932,7 +7030,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">GE 107</div>
@@ -6994,7 +7093,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">GE 109</div>
@@ -7061,7 +7161,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">IT 301</div>
@@ -7123,7 +7224,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">IT 306</div>
@@ -7182,7 +7284,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">IT 401</div>
@@ -7236,7 +7339,8 @@ opacity: 0.12;
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
 <div class="subject-grade">Grade</div>
-<div class="subject-remarks">Remarks</div>
+<div class="subject-remarks">Remarks
+</div>
 </div>
 <div class="subject-row">
 <div class="subject-code">IT 406</div>
@@ -7272,6 +7376,44 @@ opacity: 0.12;
 </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<!-- Digital Credentials Section -->
+<div id="digital-credentials" class="content-section">
+<div class="breadcrumb">
+<a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Digital Credentials</span>
+</div>
+<h1 class="page-title">Digital Credentials</h1>
+
+<div class="digital-credentials-container">
+<div class="credentials-definition-box">
+<div class="credentials-icon">
+<i class="fas fa-certificate"></i>
+</div>
+<h2>What are Digital Credentials?</h2>
+<p class="definition-text">
+Digital credentials are secure, verifiable electronic documents that certify a student's academic achievements, qualifications, and skills. These credentials are tamper-proof, easily shareable, and can be instantly verified by employers, educational institutions, or other organizations worldwide.
+</p>
+<div class="credentials-features">
+<div class="feature-item">
+<i class="fas fa-shield-alt"></i>
+<span>Secure & Verified</span>
+</div>
+<div class="feature-item">
+<i class="fas fa-share-alt"></i>
+<span>Easy to Share</span>
+</div>
+<div class="feature-item">
+<i class="fas fa-check-circle"></i>
+<span>Instantly Verifiable</span>
+</div>
+<div class="feature-item">
+<i class="fas fa-globe"></i>
+<span>Globally Recognized</span>
 </div>
 </div>
 </div>
@@ -8240,11 +8382,11 @@ Confirm Selection
 <div class="breadcrumb">
 <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Academic Grades</span>
 </div>
-<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
-<h1 class="page-title" style="margin-bottom: 0;">Academic Grades</h1>
-<button class="doc-btn" id="grades-download-btn" style="width: auto; position: relative; overflow: hidden;">
-<i class="fas fa-download"></i> Download for Free
-<span class="shimmer"></span>
+<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
+<h1 class="page-title" style="margin: 0;">Academic Grades</h1>
+<button class="doc-btn medium" id="grades-download-btn" style="width: auto; position: relative; overflow: hidden;">
+  <i class="fas fa-download"></i> Download for Free
+  <span class="shimmer"></span>
 </button>
 </div>
 <div class="card">
