--- a/index.html
+++ b/index.html
@@ -6807,7 +6807,7 @@ opacity: 0.12;
 <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Curriculum Prospectus</span>
 </div>
 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
-<h1 class="page-title" style="margin: 0;">Program Prospectus</h1>
+<h1 class="page-title" style="margin: 0;">Curicculum Prospectus</h1>
 <button class="doc-btn medium" id="prospectus-download-btn" style="width: auto; position: relative; overflow: hidden;">
   <i class="fas fa-download"></i> Download for Free
   <span class="shimmer"></span>
