--- a/index.html
+++ b/index.html
@@ -6896,7 +6896,7 @@ opacity: 0.12;
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/</div>
+<div class="subject-code">SUBJECT/COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
