--- a/index.html
+++ b/index.html
@@ -8778,12 +8778,14 @@ Confirm Selection
 <table>
 <thead>
 <tr>
-<th>Date</th>
-<th>Description</th>
-<th>Reference No.</th>
-<th>Debit</th>
-<th>Credit</th>
-<th>Balance</th>
+  <b>
+<th>DATE</th>
+<th>DESCRIPTION</th>
+<th>REFERENCE NO.</th>
+<th>DEBIT</th>
+<th>CREDIT</th>
+<th>BALANCE</th>
+</b>
 </tr>
 </thead>
 <tbody>
