--- a/index.html
+++ b/index.html
@@ -6866,7 +6866,13 @@ opacity: 0.12;
 </div>
 <div class="summary-item">
 <div class="summary-label">Academic Standing</div>
-<div class="summary-value">Dean&apos;s List</div>
+<div class="summary-value" style="color: #FFD700; font-size: 24px;">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+</div>
 </div>
 <div class="summary-item">
 <div class="summary-label">Expected Graduation</div>
