--- a/index.html
+++ b/index.html
@@ -857,6 +857,14 @@ transition: var(--transition);
 background-color: var(--card-bg);
 }
 
+.requirement-item p {
+height: 40px;
+margin: 8px 0;
+line-height: 1.5;
+display: flex;
+align-items: center;
+}
+
 .requirement-item:hover {
 box-shadow: 0 5px 15px var(--shadow-color);
 transform: translateY(-3px);
@@ -7977,10 +7985,10 @@ Confirm Selection
 </div>
 <div class="requirement-item" data-doc="form-138">
 <div class="requirement-header">
-<div class="requirement-title">Card Form (138) Credential</div>
+<div class="requirement-title">Form (138)</div>
 <div class="requirement-status status-pending">Not Uploaded Yet</div>
 </div>
-<p>Honorable dismissal certificate from previous school</p>
+<p>SHS official card form credential</p>
 <div class="requirement-actions">
 <button class="upload-action" data-doc="form-138">
 <i class="fas fa-plus"></i> Choose File
@@ -8063,10 +8071,10 @@ Confirm Selection
 </div>
 <div class="requirement-item" data-doc="form-138">
 <div class="requirement-header">
-<div class="requirement-title">Card Form (138) Credential</div>
+<div class="requirement-title">Form (138)</div>
 <div class="requirement-status status-pending">Not Uploaded Yet</div>
 </div>
-<p>Honorable dismissal certificate from previous school</p>
+<p>High School official card form credential </p>
 <div class="requirement-actions">
 <button class="upload-action" data-doc="form-138">
 <i class="fas fa-plus"></i> Choose File
@@ -12535,4 +12543,3 @@ subject.style.background = 'linear-gradient(135deg, #4E65FF, #92EFFD)';
 
 </body>
 </html>
-
