--- a/index.html
+++ b/index.html
@@ -11271,7 +11271,7 @@ function downloadPhysicalExam() {
         downloadedReports.physicalExam = true;
         btn.classList.remove('shining');
         btn.classList.add('downloaded');
-        btnText.textContent = 'Download Report';
+        btnText.textContent = 'Download With Fee (₱)';
     } else {
         if (confirm('This download costs ₱ Do you want to proceed?')) {
             alert('Download started! ₱ will be charged to your account.');
@@ -11289,7 +11289,7 @@ function downloadDrugTest() {
         downloadedReports.drugTest = true;
         btn.classList.remove('shining');
         btn.classList.add('downloaded');
-        btnText.textContent = 'Download Report (₱)';
+        btnText.textContent = 'Download With Fee (₱)';
     } else {
         if (confirm('This download costs ₱ Do you want to proceed?')) {
             alert('Download started! ₱ will be charged to your account.');
@@ -11307,7 +11307,7 @@ function downloadXRay() {
         downloadedReports.xray = true;
         btn.classList.remove('shining');
         btn.classList.add('downloaded');
-        btnText.textContent = 'Download Report (₱)';
+        btnText.textContent = 'Download With Fee (₱)';
     } else {
         if (confirm('This download costs (₱) Do you want to proceed?')) {
             alert('Download started! (₱) will be charged to your account.');
@@ -11325,7 +11325,7 @@ function downloadVaccination() {
         downloadedReports.vaccination = true;
         btn.classList.remove('shining');
         btn.classList.add('downloaded');
-        btnText.textContent = 'Download Report (₱)';
+        btnText.textContent = 'Download With Fee (₱)';
     } else {
         if (confirm('This download costs (₱) Do you want to proceed?')) {
             alert('Download started! (₱) will be charged to your account.');
@@ -11343,7 +11343,7 @@ function downloadMindcare() {
         downloadedReports.mindcare = true;
         btn.classList.remove('shining');
         btn.classList.add('downloaded');
-        btnText.textContent = 'Download Report (₱)';
+        btnText.textContent = 'Download With Fee (₱)';
     } else {
         if (confirm('This download costs ₱ Do you want to proceed?')) {
             alert('Download started! ₱ will be charged to your account.');
