--- a/index.html
+++ b/index.html
@@ -9009,7 +9009,7 @@ Confirm Selection
 <div class="breadcrumb">
 <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Wellness & Care</span>
 </div>
-<h1 class="page-title">Health & Care</h1>
+<h1 class="page-title">Wellness & Care</h1>
 
 <div class="enrollment-container">
 <div class="enrollment-overview">
