--- a/index.html
+++ b/index.html
@@ -8587,11 +8587,8 @@ Confirm Selection
 </div>
 <div class="uniform-grid-professional">
 <div class="uniform-card uniform-option selected-program" data-program="BSIT" data-category="college">
-<div class="uniform-image-container" style="width: 100%; height: 150px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px;">
-<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/boy%20unif.png" alt="BSIT Uniform Male" style="width: 100%; height: 100%; object-fit: cover;">
-</div>
-<div class="uniform-card-icon">
-<i class="fas fa-laptop-code"></i>
+<div class="uniform-image-container" style="width: 100%; height: 250px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; background: #f5f5f5;">
+<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/boy%20unif.png" alt="BSIT Uniform Male" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 </div>
 <h3 class="uniform-card-title">BSIT</h3>
 <p class="uniform-card-description">BS Information Technology</p>
@@ -8601,8 +8598,8 @@ Confirm Selection
 </div>
 
 <div class="uniform-card uniform-option selected-program" data-program="NSTP" data-category="college">
-<div class="uniform-card-icon">
-<i class="fas fa-flag"></i>
+<div class="uniform-image-container" style="width: 100%; height: 250px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; background: #f5f5f5;">
+<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/boy%20unif.png" alt="NSTP Uniform" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 </div>
 <h3 class="uniform-card-title">NSTP</h3>
 <p class="uniform-card-description">National Service Training Program</p>
@@ -8612,8 +8609,8 @@ Confirm Selection
 </div>
 
 <div class="uniform-card uniform-option selected-program" data-program="COLLEGE P.E" data-category="college">
-<div class="uniform-card-icon">
-<i class="fas fa-dumbbell"></i>
+<div class="uniform-image-container" style="width: 100%; height: 250px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; background: #f5f5f5;">
+<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/pe%20icct.png" alt="College P.E. Uniform" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 </div>
 <h3 class="uniform-card-title">College P.E.</h3>
 <p class="uniform-card-description">Physical Education</p>
@@ -8639,8 +8636,8 @@ Confirm Selection
 </div>
 <div class="uniform-grid-professional">
 <div class="uniform-card uniform-option" data-program="SHS Uniform" data-category="shs">
-<div class="uniform-card-icon">
-<i class="fas fa-graduation-cap"></i>
+<div class="uniform-image-container" style="width: 100%; height: 250px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; background: #f5f5f5;">
+<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/boy%20unif.png" alt="SHS Uniform" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 </div>
 <h3 class="uniform-card-title">SHS Uniform</h3>
 <p class="uniform-card-description">Senior High School Standard Uniform</p>
@@ -8650,8 +8647,8 @@ Confirm Selection
 </div>
 
 <div class="uniform-card uniform-option" data-program="SHS P.E" data-category="shs">
-<div class="uniform-card-icon">
-<i class="fas fa-basketball-ball"></i>
+<div class="uniform-image-container" style="width: 100%; height: 250px; overflow: hidden; border-radius: 8px 8px 0 0; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; background: #f5f5f5;">
+<img src="https://raw.githubusercontent.com/Colinn2/ICCT-STORE/main/images/pe%20icct.png" alt="SHS P.E. Uniform" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 </div>
 <h3 class="uniform-card-title">SHS P.E.</h3>
 <p class="uniform-card-description">Physical Education</p>
