--- a/index.html
+++ b/index.html
@@ -5470,7 +5470,7 @@ display: inline-block;
 
 .course-info-row {
 display: grid;
-grid-template-columns: repeat(8, 1fr);
+grid-template-columns: 2fr 2.5fr 1fr 1fr 1.5fr 0.8fr 0.8fr 1.5fr;
 gap: 16px;
 margin-bottom: 0;
 }
@@ -5479,13 +5479,6 @@ margin-bottom: 0;
 display: flex;
 flex-direction: column;
 gap: 8px;
-}
-
-/* Make specific fields narrower - Time, Day, Program, Year Level */
-.course-field:nth-child(5), /* Time */
-.course-field:nth-child(6), /* Day */
-.course-field:nth-child(7)  /* Program */ {
-max-width: 120px;
 }
 
 .course-field .field-label {
