--- a/index.html
+++ b/index.html
@@ -259,8 +259,9 @@ top: 50%;
 transform: translateY(-50%);
 width: 10px;
 height: 100%;
-background: #D0353F;
-border-radius: 0 50px 50px 0;
+background: #8A1B31;
+border-radius: 50px 0 0 50px;
+pointer-events: none;
 }
 
 .nav-links li.active::after {
@@ -271,8 +272,9 @@ top: 50%;
 transform: translateY(-50%);
 width: 10px;
 height: 100%;
-background: #8A1B31;
-border-radius: 0 50px 50px 0;
+background: #D0353F;
+border-radius: 50px 0 0 50px;
+pointer-events: none;
 }
 
 .nav-links a {
